--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Pourghannad Portfolio</title>
-    <meta name="description" content="">
+    <meta name="description" content="Pourghannad Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Pourghannad">
   </head>
