--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Pourghannad Portfolio</title>
-    <meta name="description" content="Pourghannad Portfolio">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Pourghannad">
+    <meta name="description" content="Pourghannad Portfolio" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="author" content="Pourghannad" />
   </head>
   <body>
     <header>
-      <h1>Pourghannad Portfolio</h1>
-      
+      <h1>Portfolio</h1>
     </header>
     <main>
-
+      <div class="canvas-wrapper">
+        <canvas
+          width="220px"
+          height="220px"
+          data-margin="10"
+          data-type="grid"
+          data-elementsize="3"
+          data-color="#6082dd"
+          data-elementformousemove=".canvas-wrapper"
+          data-moveradius="60"
+          data-elementrect="false"
+          data-secondrect="false"
+          data-secondcolor="#ffffff"
+        ></canvas>
+      </div>
     </main>
-    <footer>
-      Footer
-    </footer>
+    <footer>Footer</footer>
   </body>
 </html>
