add style to dopdots main canvas

--- a/src/index.html
+++ b/src/index.html
@@ -9,25 +9,25 @@
   </head>
   <body>
     <header>
-      <h1>Portfolio</h1>
+      <h1></h1>
     </header>
     <main>
       <div class="canvas-wrapper">
         <canvas
-          width="220px"
-          height="220px"
-          data-margin="10"
+          width="594px"
+          height="594px"
+          data-margin="12"
           data-type="grid"
-          data-elementsize="3"
-          data-color="#6082dd"
+          data-elementsize="10"
+          data-color="#33394b"
           data-elementformousemove=".canvas-wrapper"
-          data-moveradius="60"
-          data-elementrect="false"
-          data-secondrect="false"
-          data-secondcolor="#ffffff"
+          data-moveradius="25"
+          data-elementrect="true"
+          data-secondrect="true"
+          data-secondcolor="#2f3546"
         ></canvas>
       </div>
     </main>
-    <footer>Footer</footer>
+    <footer></footer>
   </body>
 </html>
